--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ installers = ["shell", "powershell"]
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
 # Publish jobs to run in CI
-pr-run-mode = "upload"
+pr-run-mode = "plan"
 # Skip checking whether the specified configuration files are up to date
 allow-dirty = ["ci"]
 # Whether cargo-dist should create a Github Release or use an existing draft
