--- a/examples/sqlite/getting_started_step_3/Cargo.toml
+++ b/examples/sqlite/getting_started_step_3/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 [dependencies]
 diesel = { version = "2.1.0", path = "../../../diesel", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
 dotenvy = "0.15"
+libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
 
 [[bin]]
 name = "show_posts"
