--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "examples/postgres/getting_started_step_2",
     "examples/postgres/getting_started_step_3",
     "examples/postgres/custom_types",
+    "examples/postgres/composite_types",
     "examples/postgres/relations",
     "examples/sqlite/all_about_inserts",
     "examples/sqlite/getting_started_step_1",
