--- a/.github/workflows/run_benches.yml
+++ b/.github/workflows/run_benches.yml
@@ -1,6 +1,4 @@
 on:
-  push:
-    branches: master
   pull_request:
     types: [labeled, opened, reopened, synchronize]
 
@@ -8,7 +6,7 @@ name: Run and Cache Benchmarks
 
 jobs:
   run_benchmarks:
-    if: (github.event_name == 'push' && github.ref == 'refs/heads/master') || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'run-benchmarks'))
+    if: github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -48,14 +46,29 @@ jobs:
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Benchmark ${{ matrix.backend }}
-        run: cargo +stable bench --manifest-path diesel_bench/Cargo.toml --no-default-features --features "${{ matrix.backend }}" > ${{ matrix.backend }}.txt
+      - name: Benchmark PR ${{ matrix.backend }}
+        run: cargo +stable bench --manifest-path diesel_bench/Cargo.toml --no-default-features --features "${{ matrix.backend }}" > pr_${{ matrix.backend }}.txt
 
-      - name: Upload ${{ matrix.backend }} Benchmark Results
+      - name: Upload PR ${{ matrix.backend }} Benchmark Results
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.backend }}.txt
-          path: ./${{ matrix.backend }}.txt
+          name: pr_${{ matrix.backend }}.txt
+          path: ./pr_${{ matrix.backend }}.txt
+
+      - name: Checkout base branch
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.base.sha }}
+          repository: ${{ github.event.pull_request.base.repo.full_name }}
+
+      - name: Benchmark base ${{ matrix.backend }}
+        run: cargo +stable bench --manifest-path diesel_bench/Cargo.toml --no-default-features --features "${{ matrix.backend }}" > base_${{ matrix.backend }}.txt
+
+      - name: Upload base ${{ matrix.backend }} Benchmark Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: base_${{ matrix.backend }}.txt
+          path: ./base_${{ matrix.backend }}.txt
 
       - name: Upload GitHub Event
         uses: actions/upload-artifact@v3
