--- a/diesel_cli/src/default_files/diesel.toml
+++ b/diesel_cli/src/default_files/diesel.toml
@@ -3,7 +3,7 @@
 
 [print_schema]
 file = "src/schema.rs"
-custom_type_derives = ["diesel::query_builder::QueryId"]
+custom_type_derives = ["diesel::query_builder::QueryId", "Clone"]
 
 [migrations_directory]
 dir = "migrations"
