--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -23,20 +23,24 @@ path = "src/main.rs"
 doc = false
 
 [dependencies]
-chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
+chrono = { version = "0.4.20", default-features = false, features = [
+    "clock",
+    "std",
+] }
 clap = { version = "4.0.2", features = ["cargo", "string"] }
 clap_complete = "4"
 dotenvy = "0.15"
 heck = "0.4.0"
-serde = { version = "1.0.0", features = ["derive"] }
+serde = { version = "1.0.193", features = ["derive", "std"] }
 toml = "0.8"
 url = { version = "2.2.2" }
 libsqlite3-sys = { version = ">=0.17.2, <0.28.0", optional = true }
 diffy = "0.3.0"
 regex = "1.0.6"
 serde_regex = "1.1"
-diesel_table_macro_syntax = {version = "0.1", path = "../diesel_table_macro_syntax"}
+diesel_table_macro_syntax = { version = "0.1", path = "../diesel_table_macro_syntax" }
 syn = { version = "2", features = ["visit"] }
+itertools = "0.12.0"
 
 [dependencies.diesel]
 version = "~2.1.0"
