--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -37,6 +37,9 @@ regex = "1.0.6"
 serde_regex = "1.1"
 diesel_table_macro_syntax = {version = "0.1", path = "../diesel_table_macro_syntax"}
 syn = { version = "2", features = ["visit"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
+thiserror = "1.0.10"
 
 [dependencies.diesel]
 version = "~2.1.0"
