--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -35,7 +35,8 @@ serde = { version = "1.0.193", features = ["derive", "std"] }
 toml = "0.8"
 url = { version = "2.2.2" }
 libsqlite3-sys = { version = ">=0.17.2, <0.29.0", optional = true }
-pq-sys = { version = ">=0.4, <0.6.0", optional = true }
+pq-sys = { version = ">=0.4, <0.7.0", optional = true }
+openssl-sys = { version = "0.9.93", features = ["vendored"], optional = true }
 diffy = "0.3.0"
 regex = "1.0.6"
 serde_regex = "1.1"
@@ -65,7 +66,7 @@ postgres = ["diesel/postgres", "uses_information_schema"]
 sqlite = ["diesel/sqlite"]
 mysql = ["diesel/mysql", "uses_information_schema"]
 sqlite-bundled = ["sqlite", "libsqlite3-sys/bundled"]
-postgres-bundled = ["postgres", "pq-sys/bundled"]
+postgres-bundled = ["postgres", "pq-sys/bundled", "openssl-sys"]
 uses_information_schema = []
 
 [[test]]
