Allow raw identifiers for SqlIdentifier (column-name)
This allows using the `r#identifier` syntax for SqlIdentifier
(column-name), which is used in derive macros.
Previously the derive macros would panic when encountering such an
identifier:
    `"r#identifier"` is not a valid identifier

--- a/.typos.toml
+++ b/.typos.toml
@@ -20,7 +20,9 @@ extend-ignore-re = [
     "cannot find value `titel` in module `posts`",
     "cannot find type `titel` in module `posts`",
     "[0-9]+[[:space]]+|[[:space:]]+titel: String",
-    "big_sur"
+    "big_sur",
+    # That's Spanish for "type" (used in a unit-test)
+    "tipe",
 ]
 
 [type.md]
