--- a/examples/mysql/getting_started_step_2/Cargo.toml
+++ b/examples/mysql/getting_started_step_2/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 diesel = { version = "2.1.0", path = "../../../diesel", features = ["mysql"] }
 dotenvy = "0.15"
+assert_cmd = "2.0.14"
 
 [[bin]]
 name = "show_posts"
