--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -44,11 +44,11 @@ heck = "0.5.0"
 serde = { version = "1.0.193", features = ["derive", "std"] }
 toml = "0.8"
 url = { version = "2.2.2" }
-libsqlite3-sys = { version = ">=0.17.2, <0.29.0", optional = true }
+libsqlite3-sys = { workspace = true, optional = true }
 pq-sys = { version = ">=0.4, <0.7.0", optional = true }
 openssl-sys = { version = "0.9.93", features = ["vendored"], optional = true }
 mysqlclient-sys = { version = "0.4.0", optional = true }
-diffy = "0.3.0"
+diffy = "0.4.0"
 regex = "1.0.6"
 serde_regex = "1.1"
 diesel_table_macro_syntax = { version = "0.2", path = "../diesel_table_macro_syntax" }
