--- a/examples/sqlite/relations/Cargo.toml
+++ b/examples/sqlite/relations/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dependencies]
 diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"], path = "../../../diesel" }
-libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
+libsqlite3-sys = { workspace = true, features = ["bundled"] }
 dotenvy = "0.15.6"
 
 [[bin]]
