replace dev-dependencies by dev-dependencies
`dev_dependencies` is deprecated in favor of `dev-dependencies` and
will not work in the 2024 edition. [cargo #13804](https://github.com/rust-lang/cargo/pull/13804)

--- a/examples/postgres/getting_started_step_1/Cargo.toml
+++ b/examples/postgres/getting_started_step_1/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 diesel = { version = "2.1.0", path = "../../../diesel", features = ["postgres"] }
 dotenvy = "0.15"
 
-[dev_dependencies]
+[dev-dependencies]
 assert_cmd = "2.0.14"
 
 [[bin]]
