Fixed a potential panic in SQLite row iterators
This commit fixes a potential panic in sqlite row iterator if the first
iteration step returns an error. We return now a `None` value there
instead of panicing as the iterator "ends" at that point.

--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -54,6 +54,7 @@ cfg-if = "1"
 dotenvy = "0.15"
 ipnetwork = ">=0.12.2, <0.21.0"
 quickcheck = "1.0.3"
+tempfile = "3.10.1"
 
 [features]
 default = ["with-deprecated", "32-column-tables"]
