--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,7 @@ concurrency:
 jobs:
   check_and_test:
     name: Check
-    needs:
-      [
-        sqlite_bundled,
-        rustfmt_and_clippy,
-        postgres_bundled,
-        mysql_bundled,
-        typos,
-      ]
+    needs: [sqlite_bundled, rustfmt_and_clippy, postgres_bundled, mysql_bundled]
     strategy:
       fail-fast: false
       matrix:
@@ -279,65 +272,17 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y install libsqlite3-dev libpq-dev libmysqlclient-dev
+
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: typos
       - name: Set environment variables
         shell: bash
         run: |
           echo "RUSTFLAGS=-D warnings" >> $GITHUB_ENV
           echo "RUSTDOCFLAGS=-D warnings" >> $GITHUB_ENV
-
-      - name: Remove potential newer clippy.toml from dependencies
-        run: |
-          cargo +stable update
-          cargo +stable fetch
-          find ~/.cargo/registry -iname "*clippy.toml" -delete
-
-      - name: Run clippy
-        run: |
-          cargo +stable clippy --tests --manifest-path diesel_table_macro_syntax/Cargo.toml
-          cargo +stable clippy --tests --manifest-path diesel_derives/Cargo.toml --features "postgres diesel/postgres"
-          cargo +stable clippy --tests --manifest-path diesel/Cargo.toml --features "postgres"
-          cargo +stable clippy --tests --manifest-path diesel_dynamic_schema/Cargo.toml --features "postgres diesel/postgres"
-          cargo +stable clippy --tests --manifest-path diesel_migrations/migrations_internals/Cargo.toml
-          cargo +stable clippy --tests --manifest-path diesel_migrations/migrations_macros/Cargo.toml --features "postgres diesel/postgres"
-          cargo +stable clippy --tests --manifest-path diesel_migrations/Cargo.toml --features "postgres diesel/postgres"
-          cargo +stable clippy --tests --manifest-path diesel_cli/Cargo.toml --features "postgres" --no-default-features
-          cargo +stable clippy --tests --manifest-path diesel_tests/Cargo.toml --features "postgres"
-          cargo +stable clippy --tests --manifest-path examples/postgres/getting_started_step_1/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/getting_started_step_2/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/getting_started_step_3/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/advanced-blog-cli/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/all_about_inserts/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/all_about_updates/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/custom_types/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/composite_types/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/postgres/relations/Cargo.toml
-
-          cargo +stable clippy --tests --manifest-path diesel_derives/Cargo.toml --features "sqlite diesel/sqlite"
-          cargo +stable clippy --tests --manifest-path diesel/Cargo.toml --features "sqlite"
-          cargo +stable clippy --tests --manifest-path diesel_dynamic_schema/Cargo.toml --features "sqlite diesel/sqlite"
-          cargo +stable clippy --tests --manifest-path diesel_migrations/migrations_macros/Cargo.toml --features "sqlite diesel/sqlite"
-          cargo +stable clippy --tests --manifest-path diesel_migrations/Cargo.toml --features "sqlite diesel/sqlite"
-          cargo +stable clippy --tests --manifest-path diesel_cli/Cargo.toml --features "sqlite" --no-default-features
-          cargo +stable clippy --tests --manifest-path diesel_tests/Cargo.toml --features "sqlite"
-          cargo +stable clippy --tests --manifest-path examples/sqlite/getting_started_step_1/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/sqlite/getting_started_step_2/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/sqlite/getting_started_step_3/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/sqlite/all_about_inserts/Cargo.toml
-
-          cargo +stable clippy --tests --manifest-path diesel_derives/Cargo.toml --features "mysql diesel/mysql"
-          cargo +stable clippy --tests --manifest-path diesel/Cargo.toml --features "mysql"
-          cargo +stable clippy --tests --manifest-path diesel_dynamic_schema/Cargo.toml --features "mysql diesel/mysql"
-          cargo +stable clippy --tests --manifest-path diesel_migrations/migrations_macros/Cargo.toml --features "mysql diesel/mysql"
-          cargo +stable clippy --tests --manifest-path diesel_migrations/Cargo.toml --features "mysql diesel/mysql"
-          cargo +stable clippy --tests --manifest-path diesel_cli/Cargo.toml --features "mysql" --no-default-features
-          cargo +stable clippy --tests --manifest-path diesel_tests/Cargo.toml --features "mysql"
-          cargo +stable clippy --tests --manifest-path examples/mysql/getting_started_step_1/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/mysql/getting_started_step_2/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/mysql/getting_started_step_3/Cargo.toml
-          cargo +stable clippy --tests --manifest-path examples/mysql/all_about_inserts/Cargo.toml
-
-      - name: Check formatting
-        run: cargo +stable fmt --all -- --check
+      - name: Run clippy + rustfmt
+        run: cargo xtask tidy --keep-going
 
   sqlite_bundled:
     name: Check sqlite bundled + Sqlite with asan
@@ -491,13 +436,3 @@ jobs:
         run: cargo +1.78.0 minimal-versions check -p diesel_migrations --all-features
       - name: Check diesel_cli
         run: cargo +1.78.0 minimal-versions check -p diesel_cli --features "default sqlite-bundled"
-
-  typos:
-    name: Spell Check with Typos
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Actions Repository
-        uses: actions/checkout@v4
-
-      - name: Check the spelling of the files in our repo
-        uses: crate-ci/typos@master
