--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -56,6 +56,7 @@ syn = { version = "2", features = ["visit"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
 thiserror = "1.0.10"
+similar-asserts = "1.5.0"
 
 [dependencies.diesel]
 version = "~2.2.0"
